# barrikade-core

./: .cursorrules  .gitignore  CONTRIBUTING.md  README.md  docker_entrypoint.sh  pyproject.toml  requirements.runtime.txt  requirements.txt
.claude/: CLAUDE.md
.claude/hooks/: commitlint-before-commit.py  ruff-fix.sh
.claude/rules/: conventional-commits.md  git-workflow.md  python-code-style.md
.github/: copilot-instructions.md
.github/rules/: conventional-commits.md  git-workflow.md  python-code-style.md
.github/workflows/: bandit.yml  ci.yml
api/: server.py
barrikada-mcp/: README.md  conftest.py  pyproject.toml  server.json
barrikada-mcp/barrikada_mcp/: __init__.py  __main__.py  server.py
barrikada-mcp/tests/: test_server.py
barrikade/: __init__.py  sdk.py
barrikade-mcp/: .gitignore  README.md  conftest.py  pyproject.toml  server.json
barrikade-mcp/barrikade_mcp/: __init__.py  __main__.py  broker.py  policy.py  secret_backend.py  server.py
barrikade-mcp/tests/: test_broker.py  test_server.py
core/: agent.py  artifacts.py  incident_reporter.py  intent_scorer.py  onnx_patch.py  orchestrator.py  risk_budget.py  session.py  session_orchestrator.py  session_settings.py  settings.py  telemetry.py
core/layer_b/: export_layer_b_onnx.py  signature_engine.py
core/layer_b/extraction/: dual_encoder_trainer.py
core/layer_c/: classifier.py  export_layer_c_encoder_onnx.py  export_layer_c_onnx.py
core/layer_c/train/: load_data.py  train_eval.py
core/layer_d/: classifier.py  export_layer_d_onnx.py  train_eval.py  utils.py
core/layer_e/: llm_judge.py  local_judge.py  stream_judge.py  train_eval.py  utils.py
core/tool_hijacker/: __init__.py
core/tool_hijacker/tool_generator/: llm_client.py  testbed_generator.py  tool_factory.py
demos/registry-broker/: .dockerignore  Dockerfile  README.md  agent_in_box.py  agent_policy.yaml  broker_demo.py  broker_demo_server.py  broker_http.py  broker_policy.py  demo_all.sh  docker-compose.yml  secret_backend.py
demos/registry-broker/tests/: conftest.py  test_broker_demo.py  test_broker_policy.py
demos/simple-chatapp/: demo_utils.py
docs/: DEVELOPMENT.md  MODEL_HOSTING.md  STATEFUL_SECURITY.md  TELEMETRY.md
models/: DetectionResult.py  LayerAResult.py  LayerBResult.py  LayerCResult.py  LayerDResult.py  LayerEResult.py  LayerResult.py  OutputVerificationResult.py  PipelineResult.py  __init__.py  incident_report.py  verdicts.py
postman/: README.md  barrikade-core.postman_collection.json
scripts/: download_qwen3guard.py  setup_git_hooks.py
scripts/bundling/: bundle_models.py  cleanup_archives.py  gcs_download.py  gcs_upload.py  gcs_utils.py  model_status.py  validate_models.py
tests/: conftest.py  test_bundle_models.py  test_incident_reporter.py  test_orchestrator_telemetry.py  test_session.py  test_session_orchestrator.py  test_telemetry.py  test_telemetry_upgrades.py
tests/integration_eval/: test_layer_b.py  test_layer_c.py  test_layer_d.py  test_layer_e.py  test_pipeline.py  test_pipeline_full_pass.py
tests/layer_b/: test_signature_engine_backend.py
tests/layer_c/: test_classifier_backend.py
tests/layer_d/: test_classifier_backend.py
tests/telemetry/: test_orchestrator_telemetry.py  test_telemetry_upgrades.py
tests/unit/: test_api_server.py  test_bundle_models.py  test_incident_reporter.py  test_intent_scorer.py  test_orchestrator_verify_output.py  test_risk_budget.py  test_sdk.py  test_session_orchestrator.py
tests/unit/layer_a/: test_confusables.py  test_encodings.py  test_normalise_punctuation.py  test_safe_decode.py  test_strip.py  test_unicode.py
tests/unit/layer_b/: test_layer_b_backend.py
tests/unit/layer_c/: test_layer_c_backend.py
(+3 files in other folders)
